exports[`UnionSchema normalizes an array of multiple entities using a function to infer the schemaAttribute 1`] = `
Object {
  "entities": Object {
    "users": Object {
      "1": Object {
        "id": 1,
        "username": "Janey",
      },
    },
  },
  "result": Object {
    "id": 1,
    "schema": "users",
  },
}
`;

exports[`UnionSchema normalizes an array of multiple entities using a function to infer the schemaAttribute 2`] = `
Object {
  "entities": Object {
    "groups": Object {
      "2": Object {
        "groupname": "People",
        "id": 2,
      },
    },
  },
  "result": Object {
    "id": 2,
    "schema": "groups",
  },
}
`;

exports[`UnionSchema normalizes an array of multiple entities using a function to infer the schemaAttribute 3`] = `
Object {
  "entities": Object {},
  "result": Object {
    "id": 3,
    "notdefined": "yep",
  },
}
`;

exports[`UnionSchema normalizes an object using string schemaAttribute 1`] = `
Object {
  "entities": Object {
    "users": Object {
      "1": Object {
        "id": 1,
        "type": "users",
      },
    },
  },
  "result": Object {
    "id": 1,
    "schema": "users",
  },
}
`;

exports[`UnionSchema normalizes an object using string schemaAttribute 2`] = `
Object {
  "entities": Object {
    "groups": Object {
      "2": Object {
        "id": 2,
        "type": "groups",
      },
    },
  },
  "result": Object {
    "id": 2,
    "schema": "groups",
  },
}
`;
